--- a/index.html
+++ b/index.html
@@ -1,7 +1,2 @@
-echo "# cursoexcel.github.io" >> README.md
-git init
-git add README.md
-git commit -m "first commit"
-git branch -M main
-git remote add origin https://github.com/lecas456/cursoexcel.github.io.git
-git push -u origin main
+cd username.github.io
+echo "Hello World" > index.html
