--- a/index.html
+++ b/index.html
@@ -1,2 +1,1 @@
-cd username.github.io
-echo "Hello World" > index.html
+<iframe src="https://drive.google.com/file/d/1WzbDS5vSPdT_6n2Ibth_MyrioY9tUiew/preview" width="640" height="480" allow="autoplay"></iframe>
